# streamlit-chat-with-dataframe

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
toolkit/: chatbot.py  database.py  fileio.py  prompt.py  schema.py  tools.py  ui.py
